<resources>
    <string name="app_name">ExpSa</string>
    <string name="namePerson">Name</string>
    <string name="surnamePerson">Surname</string>
    <string name="introText">" Please Enter The Following Information"</string>
    <string name="submitInfo">SUBMIT</string>
    <string name="locationsSarajevo">Locations in Sarajevo</string>
    <string name="emergencyNumbers">Emergency Contacts</string>
    <string name="feedback">Feedback</string>
    <string name="idMonuments">Monuments</string>
    <string name="idRestaurants">Restaurants</string>
    <string name="idCafe">Cafes</string>
    <string name="idNature">Nature Spots</string>
    <string name="feedbackMessage1">Was the app easy to use?</string>
    <string name="radioButton1">Yes</string>
    <string name="radioButton2">Fairly easy, could be easier</string>
    <string name="radioButton3">No</string>
    <string name="radioButton4">The hardest app I had to use</string>
    <string name="feedbackMessage2">Would you use this app again?</string>
    <string name="radioButton5">Yes</string>
    <string name="radioButton6">Maybe</string>
    <string name="radioButton7">No</string>
    <string name="feedbackMessage3">Write us your thoughts on the app itself.</string>
    <string name="writeHerePart">Write here</string>
    <string name="writeHereText1">Write here</string>
    <string name="feedbackButton">Send Feedback</string>
    <string name="emergencyContactsText">Emergency Contacts For Sarajevo</string>
    <string name="emergencyContactsText2">Only Call In Emergency Situations!</string>
    <string name="policeContact">Police</string>
    <string name="ambulanceContacts">Ambulance</string>
    <string name="firefighterContacts">Firefighters</string>
    <string name="historyText">Brief History Lesson on Sarajevo</string>
    <string name="feedbackInfoMessage">You provide us with feedback, we provide you with results!</string>
    <string name="emailForFeedback">Please Enter Your Email Address</string>
    <string name="nameForFeedback">Please Enter Your Full Name</string>
    <string name="actualFeedback">Write Your Feedback Here..</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="homeFromFeedback">Home Page</string>
</resources>
