<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emergencyContactsPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/emergency1"
    tools:context=".EmergencyContactsActivity">

    <TextView
        android:id="@+id/emergencyContactsText1"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/emergencyContactsText"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emergencyContactsText2"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/emergencyContactsText2"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/emergencyContactsText1"
        app:layout_constraintStart_toStartOf="@+id/emergencyContactsText1"
        app:layout_constraintTop_toBottomOf="@+id/emergencyContactsText1" />

    <Button
        android:id="@+id/policeContact"
        android:layout_width="213dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="policeDial"
        android:text="@string/policeContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergencyContactsText2" />

    <Button
        android:id="@+id/ambulanceContacts"
        android:layout_width="213dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="ambulanceDial"
        android:text="@string/ambulanceContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policeContact" />

    <Button
        android:id="@+id/firefighterContacts"
        android:layout_width="213dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="firefightersDial"
        android:text="@string/firefighterContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ambulanceContacts" />
</androidx.constraintlayout.widget.ConstraintLayout>