<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homePageMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/expsa41"
    tools:context=".homeScreenActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="245dp"
        android:layout_height="151dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/locationsSarajevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="openLocationsSarajevo"
            android:text="@string/locationsSarajevo" />

        <Button
            android:id="@+id/emergencyNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:onClick="openEmergencyContacts"
            android:text="@string/emergencyNumbers" />

        <Button
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:onClick="openFeedback"
            android:text="@string/feedback" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>